---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type fowo : forward\ntype a : fowo"
---
"fowo"@(FileId(1), 5..9) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of forward
"a"@(FileId(1), 25..26) [Type]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 29..33: `fowo` has not been resolved at this point
| error in file FileId(1) for 29..33: `fowo` is required to be resolved at this point
